add log and images

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My First Portfolio</title>
   <link rel="stylesheet" href="base.css">
   <link rel="stylesheet" href="styles.css">
@@ -11,6 +11,7 @@
   <header>
     <nav>
       <ul>
+        <li class="logo">&#127308;</li>
         <li><a href="/index.html">Homepage</a></li>
         <li><a href="/tweets.html">Tweets</a></li>
       </ul>
@@ -35,10 +36,12 @@
         <li>JavaScript</li>
         <li>Git & GitHub</li>
       </ul>
+      <img src="/assets/images/html.jpg" alt="image of html code">
+      <img src="/assets/images/JS.jpg" alt="js image">
       <h3>Recommended Software Engineering Programme</h3>
       <p>ALX is the best choice.</p>
       <a href="https://www.alxafrica.com/" target="_blank"><img style="width: 200px;" src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo"></a>
-      <table>
+      <table class="table-border">
         <thead>
         <tr>
           <th scope="col">Name</th>
