smile school website initial commit

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -12,8 +12,8 @@
     <nav>
       <ul>
         <li class="logo">&#127308;</li>
-        <li><a href="/index.html">Homepage</a></li>
-        <li><a href="/tweets.html">Tweets</a></li>
+        <li><a href="/css_basic/index.html">Homepage</a></li>
+        <li><a href="/css_basic/tweets.html">Tweets</a></li>
       </ul>
     </nav>
     <h1>Front-End Development Roadmap</h1>
