--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css_advanced/style.css">
+    <link rel="stylesheet" href="/css_advanced/styles.css">
     <title>SmileSchool</title>
 </head>
 <body>
@@ -37,12 +37,12 @@
                     <div class="pros-items">
                         <img src="/assets/images/1.png" alt="">
                         <h3>Phillip Massey</h3>
-                        <p>«Smile of the year»<br>2018 - 2019</p>
+                        <p>«Smile of the year»<br><span>2018 - 2019</span/></p>
                     </div>
                     <div class="pros-items">
                         <img src="/assets/images/3.png" alt="">
                         <h3>Nannie Lawrence</h3>
-                        <p>Best «little smile»<br>2017</p>
+                        <p>Best «little smile»<br><span>2017</span></p>
                     </div>
                     <div class="pros-items">
                         <img src="/assets/images/2.png" alt="" style="border-radius: 50%;">
@@ -52,22 +52,22 @@
                     <div class="pros-items">
                         <img src="/assets/images/4.png" alt="">
                         <h3>Henry Hughes</h3>
-                        <p>«24h smiles» <br> winner 2016 - 2019</p>
+                        <p>«24h smiles» winner<br><span>2016 - 2019</span> </p>
                     </div>
                 </div>
         </section>
   </div>
-        <section>
+        <section class="testimonials">
             <div>
-                <img src="./images/Bitmap.png" alt="image">
+                <img src="/assets/images/5.png" alt="image">
             </div>
             <div>
-                <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
-                <h3>NAME</h3>
+                <blockquote>«Those tutorials are concise and go straight to the point. I can't think of a better<br> place to learn smiling. And it's so fun!</blockquote>
+                <h4>Person Name</h4>
                 <P>weather presenter</P>
             </div>
         </section>
-        <section>
+        <section class="tutorials">
             <h2>Most popular tutorials</h2>
             <div>
                 <img src="./images/Bitmap (1).png" alt="">
