--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -145,58 +145,62 @@
             <h2 style="padding-top: 70px;"><span>Free</span> membership</h2>
             <div class="membership-types">
                 <div>
-                    <img src="/assets/images/smile.png" alt="">
-                    <h3>Lorem Ipsum</h3>
+                    <img src="/assets/images/smile.png" alt="" style="padding-left: 60px;">
+                    <h3 style="padding-left: 30px;">Lorem Ipsum</h3>
                     <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
                 </div>
                 <div>
-                    <img src="/assets/images/smile.png" alt="">
-                    <h3>Lorem Ipsum</h3>
+                    <img src="/assets/images/smile.png" alt="" style="padding-left: 60px;">
+                    <h3 style="padding-left: 30px;">Lorem Ipsum</h3>
                     <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
                 </div>
                 <div>
-                    <img src="/assets/images/smile.png" alt="">
-                    <h3>Lorem Ipsum</h3>
+                    <img src="/assets/images/smile.png" alt="" style="padding-left: 60px;">
+                    <h3 style="padding-left: 30px;">Lorem Ipsum</h3>
                     <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
                 </div>
                 <div>
-                    <img src="/assets/images/smile.png" alt="">
-                    <h3>Lorem Ipsum</h3>
+                    <img src="/assets/images/smile.png" alt="" style="padding-left: 60px;">
+                    <h3 style="padding-left: 30px;">Lorem Ipsum</h3>
                     <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
                 </div>
             </div>
             <button class="membership-register-btn">REGISTER FOR FREE</button>
         </section>
-        <section>
-            <h2>F.A.Q</h2>
-            <div>
-                <div>
+        <section class="faq">
+            <h2>F.A.Q.</h2>
+            <div class="frequently-asked-questions">
+                <div class="questions">
                     <div>
                         <h3>How does this work?</h3>
                     </div>
-                    <div>
+                    <div class="question-one">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
 
-                    <div>
-                        <h3>How does this work?</h3>
-                    </div>
-                    <div>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <div class="questions-container">
+                        <div>
+                            <h3>How does this work?</h3>
+                        </div>
+                        <div class="question-two">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </div>
                     </div>
                 </div>
-                <div>
+                <div >
                     <div>
                         <h3>How does this work?</h3>
                     </div>
-                    <div>
+                    <div class="question-three">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
-                    <div>
-                        <h3>How does this work?</h3>
-                    </div>
-                    <div>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <div class="questions-container">
+                        <div>
+                            <h3>How does this work?</h3>
+                        </div>
+                        <div class="question-four">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </div>
                     </div>
                 </div>
             </div>
