--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -207,10 +207,13 @@
         </section>
     </main>
     <footer>
-        <section>
-            <div>
-                <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+        <section class="last-part">
+            <div class="footer">
+                <img src="/assets/images/logo.png" alt="logo">
                 <div>
+                    <!-- <img  src="/assets/images/facebook.png" alt="twitter"/>
+                    <img  src="/assets/images/twitter.png" alt="twitter"/>
+                    <img  src="/assets/images/instagram 2.png" alt="instagram"/> -->
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
